--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -3,7 +3,7 @@ name: Terraform-AWS
 on: [pull_request]
 
 jobs:
-  filter-to-pr-open-synced:
+  Terraform-steps:
 
     runs-on: ubuntu-latest
 
@@ -13,16 +13,9 @@ jobs:
 
         with:
           args: action 'opened|synchronize'
-      - run: echo filter Done!
-      
-  terraform-fmt:
-
-    runs-on: ubuntu-latest
-
-    steps:
+ 
       - name: terraform-fmt
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: "."
-      - run: echo fmt Done!
