--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           args: action 'opened|synchronize'
  
+  Terraform-steps2:
+
+    runs-on: ubuntu-latest
+
       - name: terraform-fmt
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
