--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -18,6 +18,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    steps:
       - name: terraform-fmt
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
