--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -1,26 +1,48 @@
 name: Terraform-AWS
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+    - master
 
 jobs:
+
   Terraform-steps:
 
     runs-on: ubuntu-latest
 
     steps:
+
       - name: filter-to-pr-open-synced
         uses: actions/bin/filter@master
-
         with:
           args: action 'opened|synchronize'
  
-  Terraform-steps2:
-
-    runs-on: ubuntu-latest
-
-    steps:
       - name: terraform-fmt
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: "."
+
+      - name: terraform-init
+        uses: hashicorp/terraform-github-actions/init@v0.3.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: "."
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: terraform-validate
+        uses: hashicorp/terraform-github-actions/validate@v0.3.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: "."
+
+      - name: terraform-plan
+        uses: hashicorp/terraform-github-actions/plan@v0.3.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKSPACE = "default"
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
