--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -17,12 +17,9 @@ jobs:
         uses: actions/bin/filter@master
         with:
           args: action 'opened|synchronize'
- 
-  Terraform-steps2:
-    needs: Terraform-steps
-    runs-on: ubuntu-latest
 
-    steps:
+      - name: pull
+        uses: actions/checkout@master
 
       - name: terraform-fmt
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
@@ -30,25 +27,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: "."
 
-  Terraform-steps3:
-    needs: Terraform-steps2
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: debug
-        run: |
-          pwd
-          ls -lart
-          who
-          tree
-          ls -lart ../
-
       - name: terraform-init
         uses: hashicorp/terraform-github-actions/init@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
+          TF_ACTION_WORKING_DIR: "."
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
