--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -21,7 +21,7 @@ jobs:
       - name: pull
         uses: actions/checkout@master
 
-      - name: terraform-fmt
+      - name: terraform-format
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
