--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -22,13 +22,13 @@ jobs:
         uses: hashicorp/terraform-github-actions/fmt@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKING_DIR: /Test
 
       - name: terraform-init
         uses: hashicorp/terraform-github-actions/init@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKING_DIR: /Test
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -37,13 +37,13 @@ jobs:
         uses: hashicorp/terraform-github-actions/validate@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKING_DIR: /Test
 
       - name: terraform-plan
         uses: hashicorp/terraform-github-actions/plan@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKING_DIR: /Test
           TF_ACTION_WORKSPACE : "default"
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -53,7 +53,7 @@ jobs:
         uses: canelkatmis/terraform-github-actions/destroy@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: "."
+          TF_ACTION_WORKING_DIR: /Test
           TF_ACTION_WORKSPACE : "default"
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
