--- a/.github/workflows/Terraform-AWS.yml
+++ b/.github/workflows/Terraform-AWS.yml
@@ -1,7 +1,7 @@
 name: Terraform-AWS
 
 on:
-  push:
+  pull_request:
     branches:
     - master
 
@@ -48,6 +48,11 @@ jobs:
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: filter-to-pr-merged
+        uses: actions/bin/filter@master
+        with:
+          args: action 'merged true'
 
       - name: terraform-apply
         uses: hashicorp/terraform-github-actions/apply@v0.3.5
