--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -1,4 +1,4 @@
-name: Terraform-AWS
+name: Terraform-Plan
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
     - master
 
 jobs:
-  Apply-to-AWS:
+  Plan-for-AWS:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,31 +41,6 @@ jobs:
 
       - name: terraform-plan
         uses: hashicorp/terraform-github-actions/plan@v0.3.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-          TF_ACTION_WORKSPACE : "default"
-          TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: filter-to-pr-merged
-        uses: actions/bin/filter@master
-        with:
-          args: action 'merged true'
-
-      - name: terraform-apply
-        uses: hashicorp/terraform-github-actions/apply@v0.3.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-          TF_ACTION_WORKSPACE : "default"
-          TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: terraform-destroy
-        uses: canelkatmis/terraform-github-actions/destroy@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
