--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -11,36 +11,20 @@ on:
     #- '!*.md'
 
 jobs:
-  Plan-for-AWS:
+  Apply-to-AWS:
     runs-on: ubuntu-latest
 
     steps:
+      - name: filter-to-pr-merged
+        uses: actions/bin/filter@master
+        with:
+          args: action 'opened|synchronize'
+
       - name: pull
         uses: actions/checkout@master
 
-      - name: terraform-format
-        uses: hashicorp/terraform-github-actions/fmt@v0.3.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-
-      - name: terraform-init
-        uses: hashicorp/terraform-github-actions/init@v0.3.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-          TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: terraform-validate
-        uses: hashicorp/terraform-github-actions/validate@v0.3.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-
-      - name: terraform-plan
-        uses: canelkatmis/terraform-github-actions/plan@master
+      - name: terraform-apply
+        uses: hashicorp/terraform-github-actions/apply@v0.3.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
@@ -49,5 +33,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-
-
+      - name: terraform-destroy
+        uses: canelkatmis/terraform-github-actions/destroy@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: ./Test
+          TF_ACTION_WORKSPACE : "default"
+          TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
