--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -1,15 +1,16 @@
 name: Terraform-Plan
 
 on:
-  push:
+  pull_request:
     branches:
     - master
+    #- env_*
     paths:
     - '*'
     - '!Test/*'
     - '!.github/*'
     #- '!*.md'
-
+    
 jobs:
   Plan-for-AWS:
     runs-on: ubuntu-latest
