--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -3,8 +3,8 @@ name: Terraform-Plan
 on:
   pull_request:
     branches:
-    - master
-    #- env_*
+    #- master
+    - env_*
     paths:
     - '*'
     - '!Test/*'
