--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -3,12 +3,16 @@ name: Terraform-Apply
 on:
   push:
     branches:
-    - master
+    - env_*
     paths:
     - '*'
     - '!Test/*'
     - '!.github/*'
     #- '!*.md'
+
+  create:
+    branches:
+    - env_*
 
 jobs:
   Apply-to-AWS:
