--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -3,7 +3,8 @@ name: Terraform-Apply
 on:
   pull_request:
     branches:
-    - env_*
+    #- env_*
+    - master
     paths:
     - '*'
     - 'Test/*'
