--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -20,13 +20,13 @@ jobs:
         uses: actions/checkout@master
 
       - name: terraform-format
-        uses: hashicorp/terraform-github-actions/fmt@v0.3.5
+        uses: hashicorp/terraform-github-actions/fmt@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
 
       - name: terraform-init
-        uses: hashicorp/terraform-github-actions/init@v0.3.5
+        uses: hashicorp/terraform-github-actions/init@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
@@ -35,13 +35,13 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: terraform-validate
-        uses: hashicorp/terraform-github-actions/validate@v0.3.5
+        uses: hashicorp/terraform-github-actions/validate@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
 
       - name: terraform-plan
-        uses: hashicorp/terraform-github-actions/plan@v0.3.5
+        uses: hashicorp/terraform-github-actions/plan@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: ./Test
