--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -14,18 +14,15 @@ on:
       - closed
 
 jobs:
-  Filter:
-    name: filter if it is merged
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/bin/filter@master
-      with:
-        args: "merged true"
-
   Apply-to-AWS:
     runs-on: ubuntu-latest
 
     steps:
+      - name: filter if it is merged
+        uses: actions/bin/filter@master
+        with:
+          args: "merged true"
+        
       - name: pull
         uses: actions/checkout@master
         
