--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -19,32 +19,47 @@ jobs:
         uses: actions/checkout@master
 
       - name: terraform-format
-        uses: canelkatmis/terraform-github-actions/fmt@v0.5.0
+        uses: canelkatmis/terraform-github-actions@v0.5.0
+        with:
+          tf_actions_version: 0.12.13
+          tf_actions_subcommand: 'fmt'
+          tf_actions_working_dir: './Test'
+          tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
 
       - name: terraform-init
-        uses: canelkatmis/terraform-github-actions/init@v0.5.0
+        uses: canelkatmis/terraform-github-actions@v0.5.0
+        with:
+          tf_actions_version: 0.12.13
+          tf_actions_subcommand: 'init'
+          tf_actions_working_dir: './Test'
+          tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: terraform-validate
-        uses: canelkatmis/terraform-github-actions/validate@v0.5.0
+        uses: canelkatmis/terraform-github-actions@v0.5.0
+        with:
+          tf_actions_version: 0.12.13
+          tf_actions_subcommand: 'validate'
+          tf_actions_working_dir: './Test'
+          tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
 
       - name: terraform-plan
-        uses: canelkatmis/terraform-github-actions/plan@v0.5.0
+        uses: canelkatmis/terraform-github-actions@v0.5.0
+        with:
+          tf_actions_version: 0.12.13
+          tf_actions_subcommand: 'plan'
+          tf_actions_working_dir: './Test'
+          tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: ./Test
-          TF_ACTION_WORKSPACE : "default"
           TF_ACTION_TFE_TOKEN: ${{ secrets.TF_ACTION_TFE_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
