--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -11,7 +11,7 @@ on:
     - '!.github/*'
     #- '!*.md'
 env:
-  TF_ACTIONS_VERSION: v0.5.0
+  TF_ACTIONS_VERSION: '0.12.13'
    
 jobs:
   Plan-for-AWS:
@@ -21,46 +21,46 @@ jobs:
         uses: actions/checkout@master
 
       - name: terraform-format
-        uses: canelkatmis/terraform-github-actions@${{ env.TF_ACTIONS_VERSION }}
+        uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'fmt'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'fmt'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: terraform-init
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'init'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'init'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_CLI_ARGS_init: '-backend-config="token=${{ secrets.TF_ACTION_TFE_TOKEN }}"'
+          TF_CLI_ARGS_init:      '-backend-config="token=${{ secrets.TF_ACTION_TFE_TOKEN }}"'
 
       - name: terraform-validate
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'validate'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'validate'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: terraform-plan
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'plan'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'plan'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
