--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -12,6 +12,8 @@ on:
     #- '!*.md'
     types:
       - closed
+env:
+  TF_ACTIONS_VERSION: '0.12.13'
 
 jobs:
   Apply-to-AWS:
@@ -24,36 +26,36 @@ jobs:
       - name: terraform-init
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'init'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'init'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_CLI_ARGS_init: '-backend-config="token=${{ secrets.TF_ACTION_TFE_TOKEN }}"'
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+          TF_CLI_ARGS_init:      '-backend-config="token=${{ secrets.TF_ACTION_TFE_TOKEN }}"'
+          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           
       - name: terraform-apply
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'apply'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'apply'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: terraform-destroy
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'destroy'
+          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+          tf_actions_subcommand:  'destroy'
           tf_actions_working_dir: './Test'
-          tf_actions_comment: true
+          tf_actions_comment:     true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
