--- a/.github/workflows/Terraform-plan.yml
+++ b/.github/workflows/Terraform-plan.yml
@@ -3,8 +3,8 @@ name: Terraform-Plan
 on:
   pull_request:
     branches:
-    - master
-    #- env_*
+    #- master
+    - env_*
     paths:
     - '*'
     - 'Test/*'
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pull
-        uses: actions/checkout@master
+        uses: actions/checkout@v1
 
       - name: terraform-format
         uses: canelkatmis/terraform-github-actions@v0.5.0
