--- a/.github/workflows/Terraform-apply.yml
+++ b/.github/workflows/Terraform-apply.yml
@@ -3,8 +3,8 @@ name: Terraform-Apply
 on:
   pull_request:
     branches:
-    #- env_*
-    - master
+    #- master
+    - env_*
     paths:
     - '*'
     - 'Test/*'
@@ -49,14 +49,14 @@ jobs:
           AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: terraform-destroy
-        uses: canelkatmis/terraform-github-actions@v0.5.0
-        with:
-          tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
-          tf_actions_subcommand:  'destroy'
-          tf_actions_working_dir: './Test'
-          tf_actions_comment:     true
-        env:
-          GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       - name: terraform-destroy
+#         uses: canelkatmis/terraform-github-actions@v0.5.0
+#         with:
+#           tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
+#           tf_actions_subcommand:  'destroy'
+#           tf_actions_working_dir: './Test'
+#           tf_actions_comment:     true
+#         env:
+#           GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
+#           AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
