--- a/.github/workflows/Terraform-destroy.yml
+++ b/.github/workflows/Terraform-destroy.yml
@@ -1,23 +1,16 @@
 name: Terraform-Destroy
 
 on:
-  pull_request:
+  delete:
     branches:
     #- master
     - env_*
-    paths:
-    - '*'
-    - 'Test/*'
-    - '!.github/*'
-    #- '!*.md'
-    types:
-      - closed
+      
 env:
   TF_ACTIONS_VERSION: '0.12.13'
 
 jobs:
   Apply-to-AWS:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:     
@@ -37,26 +30,14 @@ jobs:
           AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           
-      - name: terraform-apply
+      - name: terraform-destroy
         uses: canelkatmis/terraform-github-actions@v0.5.0
         with:
           tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
-          tf_actions_subcommand:  'apply'
+          tf_actions_subcommand:  'destroy'
           tf_actions_working_dir: './Test'
           tf_actions_comment:     true
         env:
           GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-#       - name: terraform-destroy
-#         uses: canelkatmis/terraform-github-actions@v0.5.0
-#         with:
-#           tf_actions_version:     ${{ env.TF_ACTIONS_VERSION }}
-#           tf_actions_subcommand:  'destroy'
-#           tf_actions_working_dir: './Test'
-#           tf_actions_comment:     true
-#         env:
-#           GITHUB_TOKEN:          ${{ secrets.GITHUB_TOKEN }}
-#           AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
